fixed table and title overflows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,8 @@ main {
   font-weight: 500;
   line-height: 1.4em;
   margin-top: 0;
+  width: 100%;
+  overflow-wrap: break-word;
 }
 
 .article-info {
@@ -154,10 +156,16 @@ iframe {
 }
 /* TABELLE */
 
+#table-container {
+  width: 100%;
+  overflow-x: auto;
+}
+
 table {
   margin-left: auto;
   margin-right: auto;
   border-bottom: 2px solid #176cbc;
+  width: 100%;
 }
 
 table caption {
@@ -169,6 +177,7 @@ th,
 td {
   font-size: 1.3em;
   padding: 1em;
+  overflow: hidden;
 }
 
 .colored-tr {
@@ -202,7 +211,7 @@ form {
   font-size: 1.3em;
   padding-left: 1.5%;
   border-bottom: 1px dashed grey;
-  width: 50%;
+  max-width: 50%;
 }
 
 #novità-container button {
@@ -212,6 +221,8 @@ form {
   font-size: 1.5em;
   padding: 0.1em 0.5em 1.2em 0.5em;
   border: none;
+  max-width: 40%;
+  text-overflow: ellipsis;
 }
 
 /* ELEMENTI NELL' ASIDE */
